# slang-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
scripts/: download-slang.sh
shaders/: test.slang
slang-sys/: Cargo.toml  build.rs
slang-sys/src/: bindings.rs  lib.rs
src/: c_string_ptr.rs  fs.rs  lib.rs  tests.rs
src/reflection/: decl.rs  entry_point.rs  function.rs  generic.rs  mod.rs  shader.rs  ty.rs  type_layout.rs  type_parameter.rs  user_attribute.rs  variable.rs  variable_layout.rs
