[package]
name = "shader-slang"
version = "0.1.0"
edition = "2024"
description = "Rust bindings for the Slang shader language compiler"
repository = "https://github.com/FloatyMonkey/slang-rs"
license = "MIT OR Apache-2.0"
categories = ["compilers", "api-bindings"]

[dependencies]
shader-slang-sys = { path = "slang-sys", default-features = false, version = "0.1.0" }

[features]
serde = ["shader-slang-sys/serde"]
default = ["dynamic"]
dynamic = ["shader-slang-sys/dynamic"]
static = ["shader-slang-sys/static"]

[workspace]
members = ["slang-sys"]
